--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   </section>
   <section class="join" id="podpiska">
     <div class="u-wrapper">
-      <small>35,000+ уже присоединились</small>
+      <small>35,000+ пользователей уже присоединились</small>
       <h4 class="u-h4">Для подписки укажите вашу почту и следуйте инструкциям</h4>
       <form action="" class="form">
         <input placeholder="Введите ваш Email адрес" type="text" class="form-input">
