--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content=" ">
+  <meta name="keywords" content="книги, отношения, знакомства, сайт, онлайн, регистрация">
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./static/css/styles.css">
-  <title>Электронные книги | О тношения между мужчиной и женщиной</title>
+  <title>Сайт электронных книг | Психология, знакомства с девушкой, отношения для взрослых</title>
 
 
 </head>
