--- a/index.html
+++ b/index.html
@@ -296,6 +296,15 @@
 
 
 
+<!-- Global site tag (gtag.js) - Google Ads: 10826915376 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10826915376"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10826915376');
+</script>
 
 
 
